refactor: split JNI and Panama into two separate Maven projects
Project structure:
- pom.xml (root): JNI-only project, Java 11 source level
  - Sources: java/src/main/java, java/src/jmh/java
  - Tests: java/src/test/java (JNI tests only)
  - Output: FSE_Wrapper-{version}.jar (shaded, runnable JMH JAR)
- java-panama/pom.xml (new): Panama FFI project, Java 22 source level
  - Sources: java-panama/src/main/java
  - Tests: java-panama/src/test/java (Panama tests moved here)
  - Output: FSE_Wrapper-panama-{version}.jar

Why: FFM API finalized in Java 22 (JEP 454). Mixing Java 11 JNI
and Java 22 Panama in one pom forced --release 22 which breaks users
on Java 11-21. Separate projects give users the correct minimum:
- FSE_Wrapper.jar: requires Java 11+
- FSE_Wrapper-panama.jar: requires Java 22+

Workflows:
- rc.yaml: completely rewritten from scratch (clean YAML, consistent
  2-space indentation). Adds java-panama job building the second JAR.
- release.yaml: adds java-panama job, updates package job artifact names
  (java-jni-jar and java-panama-jar instead of java-jar).

Benchmarks:
- JMH CodeBench.java: removed Panama benchmark methods (Panama is in
  its own project, JMH runs against JNI JAR only)
- Removed @Fork --enable-native-access flag (not needed for JNI)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>